solution/kafka/namespace.yaml
  apiVersion: v1
  kind: Namespace
  metadata:
    name: "kafka"
    labels:
      name: "kafka"
