solution/kafka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  #tls:
  #- hosts:
  #  - kafka.k8s-taint.org
  #  secretName: tls-secret-kafka
  rules:
  - host: kafka.k8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-service
            port: 
              number: 9092
